# thanatos

./: Cargo.toml  README.md
aether/: Cargo.toml
aether/src/: lib.rs
arbiter/: Cargo.toml
arbiter/src/: lib.rs  main.rs  world.rs
assets/worldfiles/: world.json
gltf/: Cargo.toml
gltf/src/: lib.rs
thanatos/: Cargo.toml
thanatos/assets/: gpass.wgsl  light.wgsl  shader.wgsl
thanatos/src/: assets.rs  camera.rs  input.rs  main.rs  mesh.rs  player.rs  scene.rs  system.rs  time.rs  transform.rs  world.rs
thanatos/src/renderer/: context.rs  mod.rs  renderer.rs  utils.rs
