[package]
name = "arbiter"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.22.0", features = ["const_zeroed", "derive", "extern_crate_alloc", "must_cast"] }
concat-idents = "1.1.5"
glam = { version = "0.30.0", features = ["bytemuck"] }
rustix = { version = "1.0.2", features = ["fs", "mm"] }
