[package]
name = "arbiter"
version = "0.1.0"
edition = "2024"

[dependencies]
aether = { path = "../aether" }
bitcode = { version = "0.6.6", features = ["glam"] }

bytemuck = "1.22.0"
env_logger = "0.11.7"
futures = "0.3.31"
glam = "0.30.1"
log = "0.4.26"
tokio = { version = "1.44.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
