[package]
name = "thanatos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thanatos_macros = { path = "../thanatos_macros" }
gltf = { path = "../gltf" }
tecs = { path = "../tecs" }
hephaestus = { path = "../hephaestus" }

bytemuck = { version = "1.15.0", features = ["derive"] }
concat-idents = "1.1.5"
glam = { version = "0.26.0", features = ["bytemuck"] }
winit = { version = "0.29.15", features = ["rwh_05"] }
pretty_env_logger = "0.5.0"
log = "0.4.21"
anyhow = "1.0.81"
rand = "0.8.5"
nyx = { version = "0.1.0", path = "../nyx" }
bincode = "1.3.3"
styx = { version = "0.1.0", path = "../styx" }
assets = { version = "0.1.0", path = "../assets" }
serde_json = "1.0.116"
serde = "1.0.199"
