[package]
name = "thanatos"
version = "0.1.0"
edition = "2024"

[dependencies]
aether = { version = "0.1.0", path = "../aether" }
anyhow = "1.0.97"
bitcode = { version = "0.6.6", features = ["glam"] }
bytemuck = { version = "1.22.0", features = ["derive"] }
env_logger = "0.11.7"
glam = { version = "0.30.0", features = ["bytemuck"] }
gltf = { version = "0.1.0", path = "../gltf" }
log = "0.4.27"
once_cell = "1.20.3"
pollster = "0.4.0"
tokio = { version = "1.44.1", features = ["full"] }
wgpu = "24.0.1"
winit = "0.30.9"
